--- a/Fingerprint_Door_Lock/fingerprint_door_lock_app/pubspec.yaml
+++ b/Fingerprint_Door_Lock/fingerprint_door_lock_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   simple_animations: ^1.1.3
   flutter_spinkit: ^4.1.2+1
   shared_preferences: ^0.5.8
+  after_layout: ^1.0.7+2
 
 dev_dependencies:
   flutter_test:
