--- a/Fingerprint_Door_Lock/fingerprint_door_lock_app/pubspec.yaml
+++ b/Fingerprint_Door_Lock/fingerprint_door_lock_app/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   simple_animations: ^1.1.3
   flutter_spinkit: ^4.1.2+1
   shared_preferences: ^0.5.8
-  after_layout: ^1.0.7+2
+  get_it: ^4.0.4
+  local_auth: ^0.6.3
 
 dev_dependencies:
   flutter_test:
