--- a/Fingerprint_Door_Lock/fingerprint_lock/pubspec.yaml
+++ b/Fingerprint_Door_Lock/fingerprint_lock/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   simple_animations: ^1.1.3
   flutter_spinkit: ^4.1.2+1
   shared_preferences: ^0.5.8
-  get_it: ^4.0.4
+  flutter_bluetooth_serial: ^0.2.2
   local_auth: ^0.6.3
 
 dev_dependencies:
