--- a/Fingerprint_Door_Lock/fingerprint_lock/pubspec.yaml
+++ b/Fingerprint_Door_Lock/fingerprint_lock/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^0.5.8
   flutter_bluetooth_serial: ^0.2.2
   local_auth: ^0.6.3
+  scoped_model: ^1.0.1
 
 dev_dependencies:
   flutter_test:
